--- a/.github/workflows/circle_benchmark.yml
+++ b/.github/workflows/circle_benchmark.yml
@@ -11,43 +11,44 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
-        # Fetches the source code from the repository
+        # Fetches the source code
         uses: actions/checkout@v4
 
-      - name: Get CPU Hardware Info
-        # Logs the specific CPU model used by the GitHub runner
+      - name: Get Environment & Metadata
+        # Detects CPU model and extracts the value of N from the header
         run: |
           MODEL=$(lscpu | grep "Model name" | cut -d':' -f2 | xargs)
+          N_VAL=$(grep "#define N " Circle_Permutation_Algorithm.cpp | awk '{print $3}')
           echo "CPU_MODEL=$MODEL" >> $GITHUB_ENV
+          echo "CURRENT_N=$N_VAL" >> $GITHUB_ENV
 
-      - name: Compile Circle Algorithm
-        # Compile with aggressive optimization flags for maximum performance
+      - name: Compile
+        # Compile with maximum optimization levels
         run: |
           g++ -O3 -std=c++11 -march=native -flto -ffast-math -fomit-frame-pointer \
           Circle_Permutation_Algorithm.cpp -o circle_test -pthread
 
-      - name: Execute and Capture Results
-        # Runs the binary and saves output to a file while showing it in real-time
+      - name: Execute
+        # Runs the benchmark and captures time and checksum
         run: |
           ./circle_test | tee run_log.txt
-          # Extract the execution time from the line containing RESULT_TIME
           TIME_VAL=$(grep "RESULT_TIME" run_log.txt | awk '{print $2}')
+          CHECK_VAL=$(grep "CHECKSUM_COUNT" run_log.txt | awk '{print $2}')
           echo "TIME_CIRCLE=$TIME_VAL" >> $GITHUB_ENV
+          echo "CHECKSUM=$CHECK_VAL" >> $GITHUB_ENV
 
       - name: Generate Summary Report
-        # Creates a Markdown table in the GitHub Action Summary page
+        # Creates the final Markdown table in the Summary page
         if: always()
         run: |
-          echo "### 🚀 Performance Benchmark Report" >> $GITHUB_STEP_SUMMARY
-          echo "| Algorithm | Execution Time | Status |" >> $GITHUB_STEP_SUMMARY
-          echo "| :--- | :--- | :--- |" >> $GITHUB_STEP_SUMMARY
-          # Handle cases where time might be missing
-          if [ -n "${{ env.TIME_CIRCLE }}" ]; then
-            echo "| Circle Permutation | \`${{ env.TIME_CIRCLE }} s\` | Completed |" >> $GITHUB_STEP_SUMMARY
-          else
-            echo "| Circle Permutation | \`N/A\` | Failed/Timeout |" >> $GITHUB_STEP_SUMMARY
-          fi
+          echo "### 🚀 Performance Benchmark Report (N=${{ env.CURRENT_N }})" >> $GITHUB_STEP_SUMMARY
+          echo "| Metric | Value |" >> $GITHUB_STEP_SUMMARY
+          echo "| :--- | :--- |" >> $GITHUB_STEP_SUMMARY
+          echo "| **N (Input Size)** | ${{ env.CURRENT_N }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| **Execution Time** | \`${{ env.TIME_CIRCLE }} s\` |" >> $GITHUB_STEP_SUMMARY
+          echo "| **Checksum (Perms)** | \`${{ env.CHECKSUM }}\` |" >> $GITHUB_STEP_SUMMARY
+          echo "| **Status** | Completed |" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "#### 💻 Environment Information" >> $GITHUB_STEP_SUMMARY
           echo "- **CPU Model:** ${{ env.CPU_MODEL }}" >> $GITHUB_STEP_SUMMARY
-          echo "- **Optimizations:** \`-O3 -march=native -flto\`" >> $GITHUB_STEP_SUMMARY
+          echo "- **Optimization Flags:** \`-O3 -march=native -flto\`" >> $GITHUB_STEP_SUMMARY
