--- a/.github/workflows/circle_benchmark.yml
+++ b/.github/workflows/circle_benchmark.yml
@@ -7,50 +7,55 @@ on:
 
 jobs:
   benchmark:
-    name: Run Circle Permutation Profiling
+    name: Run Profiling
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Get Environment & Metadata
-        # Extract N and CPU model without extra spaces or symbols
+      - name: Get CPU Info
+        # Get hardware model for environment context
         run: |
           MODEL=$(lscpu | grep "Model name" | cut -d':' -f2 | xargs)
-          N_VAL=$(grep "#define N " Circle_Permutation_Algorithm.cpp | awk '{print $3}' | tr -d '\r\n')
           echo "CPU_MODEL=$MODEL" >> $GITHUB_ENV
-          echo "CURRENT_N=$N_VAL" >> $GITHUB_ENV
 
       - name: Compile
+        # Compile with maximum optimization flags
         run: |
           g++ -O3 -std=c++11 -march=native -flto -ffast-math -fomit-frame-pointer \
           Circle_Permutation_Algorithm.cpp -o circle_test -pthread
 
-      - name: Execute
+      - name: Execute and Parse
+        # Run the binary and dynamically extract N, Time, and Checksum
         run: |
           ./circle_test | tee run_log.txt
-          # Use 'tr' to remove any potential hidden carriage returns or newlines
+          
+          # Dynamic extraction from runtime output
+          DYNAMIC_N=$(grep "PARAM_N" run_log.txt | awk '{print $2}' | tr -d '\r\n')
           TIME_VAL=$(grep "RESULT_TIME" run_log.txt | awk '{print $2}' | tr -d '\r\n')
           CHECK_VAL=$(grep "CHECKSUM_COUNT" run_log.txt | awk '{print $2}' | tr -d '\r\n')
+          
+          # Save to environment variables
+          echo "REPORT_N=$DYNAMIC_N" >> $GITHUB_ENV
           echo "TIME_CIRCLE=$TIME_VAL" >> $GITHUB_ENV
           echo "CHECKSUM=$CHECK_VAL" >> $GITHUB_ENV
 
       - name: Generate Summary Report
+        # Create a professional Markdown summary using the dynamic variables
         if: always()
         run: |
-          # Use a heredoc to create a clean, single-block Markdown report
           cat <<EOF >> $GITHUB_STEP_SUMMARY
-          ### 🚀 Performance Benchmark Report (N=${{ env.CURRENT_N }})
+          ### 🚀 Performance Benchmark Report (N=${{ env.REPORT_N }})
 
           | Metric | Value |
           | :--- | :--- |
-          | **N (Input Size)** | ${{ env.CURRENT_N }} |
+          | **Input Size (N)** | ${{ env.REPORT_N }} |
           | **Execution Time** | \`${{ env.TIME_CIRCLE }} s\` |
-          | **Checksum (Perms)** | \`${{ env.CHECKSUM }}\` |
-          | **Status** | Completed |
+          | **Total Permutations** | \`${{ env.CHECKSUM }}\` |
+          | **Status** | ✅ Completed |
 
-          #### 💻 Environment Information
-          - **CPU Model:** ${{ env.CPU_MODEL }}
+          #### 💻 System Environment
+          - **Processor:** ${{ env.CPU_MODEL }}
           - **Optimization:** \`-O3 -march=native -flto\`
-          - **Timestamp:** $(date -u)
+          - **Generated At:** $(date -u)
           EOF
