--- a/.github/workflows/circle_permutation_pp_cp_performance_benchmark.yml
+++ b/.github/workflows/circle_permutation_pp_cp_performance_benchmark.yml
@@ -26,11 +26,12 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v4
 
-    - name: Setup GCC Environment (Windows)
+    - name: Setup MinGW Environment (Windows)
       if: matrix.os == 'windows-latest'
-      uses: egor-tensin/setup-gcc@v1
+      uses: egor-tensin/setup-mingw@v2
       with:
         platform: x64
+        cc: 0
 
     - name: Compile PP+CP Hybrid Engine
       run: |
