--- a/.github/workflows/circle_permutation_pp_cp_performance_benchmark.yml
+++ b/.github/workflows/circle_permutation_pp_cp_performance_benchmark.yml
@@ -3,10 +3,13 @@ name: Circle-PP-CP-Performance-Benchmark
 on:
   push:
     branches: [ "main" ]
-paths:
-  - 'cpp/pure_circle.cpp'
+    # Line 6: Now correctly indented under 'push'
+    paths:
+      - 'cpp/pure_circle.cpp'
+      
   pull_request:
     branches: [ "main" ]
+    # Also correctly indented under 'pull_request'
     paths:
       - 'cpp/pure_circle.cpp'
 
