--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,12 +2,12 @@
 name: Deploy-Algorithm-Project
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
+    # Fixed: paths is now correctly aligned with branches
     paths:
-      - "*.html"      # Only run when HTML files change
-      - "index.html"    
+      - "*.html"
+      - "index.html" 
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
