--- a/.github/workflows/Ring_Cascade_benchmark.yml
+++ b/.github/workflows/Ring_Cascade_benchmark.yml
@@ -1,11 +1,11 @@
-name: Circle Permutation Benchmark
+name: Ring-Cascade-Permutation-Algorithm Benchmark
 
 on:
   push:
     branches: [ "main" ]
     paths:
       # Only trigger if this specific file changes
-      - 'Circle_Permutation_Algorithm.cpp'
+      - 'Ring-Cascade-Permutation-Algorithm.cpp'
   workflow_dispatch:
 
 jobs:
@@ -26,12 +26,12 @@ jobs:
         # Compile with maximum optimization flags
         run: |
           g++ -O3 -std=c++11 -march=native -flto -ffast-math -fomit-frame-pointer \
-          Circle_Permutation_Algorithm.cpp -o circle_test -pthread
+          Ring-Cascade-Permutation-Algorithm.cpp -o Ring_Cascade_test -pthread
 
       - name: Execute and Parse
         # Run the binary and dynamically extract N, Time, and Checksum
         run: |
-          ./circle_test | tee run_log.txt
+          ./Ring_Cascade_test | tee run_log.txt
           
           # Dynamic extraction from runtime output
           DYNAMIC_N=$(grep "PARAM_N" run_log.txt | awk '{print $2}' | tr -d '\r\n')
@@ -40,7 +40,7 @@ jobs:
           
           # Save to environment variables
           echo "REPORT_N=$DYNAMIC_N" >> $GITHUB_ENV
-          echo "TIME_CIRCLE=$TIME_VAL" >> $GITHUB_ENV
+          echo "TIME_Ring_Cascade=$TIME_VAL" >> $GITHUB_ENV
           echo "CHECKSUM=$CHECK_VAL" >> $GITHUB_ENV
 
       - name: Generate Summary Report
@@ -53,7 +53,7 @@ jobs:
           | Metric | Value |
           | :--- | :--- |
           | **Input Size (N)** | ${{ env.REPORT_N }} |
-          | **Execution Time** | \`${{ env.TIME_CIRCLE }} s\` |
+          | **Execution Time** | \`${{ env.TIME_Ring_Cascade }} s\` |
           | **Total Permutations** | \`${{ env.CHECKSUM }}\` |
           | **Status** | ✅ Completed |
 
